--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,11 @@ html,
 body {
 	font-family: "Helvetica";
 }
+body{
+	&.lock{
+		overflow: hidden;
+	}
+}
 .wrapper {
 	display: flex;
 	flex-direction: column;
@@ -49,7 +54,6 @@ body {
 	max-width: 1710px;
 	margin: 0 auto;
 	padding: 0 15px;
-	border: 1px solid red;
 }
 
 //header
@@ -59,8 +63,7 @@ body {
 	width: 100%;
 	top: 0;
 	left: 0;
-	z-index: 50;
-
+	z-index: 10;
 	&:before {
 		content: "";
 		position: absolute;
@@ -68,21 +71,45 @@ body {
 		left: 0;
 		width: 100%;
 		height: 100%;
+		background-color: #fff;
+		z-index: 2;
 	}
 
 	&__body {
 		position: relative;
-		z-index: 2;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		height: 110px;
+		.header__close-area{
+			transition: all 0.3s ease 0s;
+			opacity: 0;
+			visibility: hidden;
+			position: fixed;
+			background-color: rgba(0, 0, 0, 0.5);
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			z-index: 4;
+			&.active{
+				opacity: 1;
+				visibility: visible;
+			}
+		}
+		@media (max-width:767px) {
+			height: 60px;
+		}
+		@media (max-width:460px){
+			height: 50px;
+		}
 	}
 
 	&__logo {
 		display: flex;
 		align-items: center;
-		flex: 1 1 auto;
+		position: relative;
+		z-index: 3;
 	}
 
 	&__image {
@@ -90,6 +117,13 @@ body {
 		flex: 0 0 118px;
 		img {
 			max-width: 100%;
+		}
+		@media (max-width:767px) {
+			flex: 0 0 60px;
+			margin-right: 10px;
+		}
+		@media (max-width:460px){
+			flex: 0 0 50px;
 		}
 	}
 
@@ -99,16 +133,66 @@ body {
 		letter-spacing: -0.02em;
 		color: #3d3d3d;
 		max-width: 280px;
-	}
-
-	&__burger {
+		span{
+			display: none;
+		}
+		@media (max-width:767px) {
+			p{
+				font-size: 12px;
+				line-height: normal;
+			}
+		}
+		@media (max-width:460px) {
+			span{
+				display: block;
+				font-size: 14px;
+				font-weight: 700;
+			}
+			p{
+				display: none;
+			}
+		}
 	}
 
 	&__menu {
+		margin-left: auto;
+		transition: all 0.3s ease 0s;
+		overflow: auto;
+		@media (max-width: 1365px){
+			position: fixed;
+			top: 0;
+			right: 0;
+			z-index: 5;
+			width: 300px;
+			height: 100%;
+			background-color: #fff;
+			padding: 130px 15px 15px 15px;
+			transform: translate(100%);
+			&.active{
+				transform: translate(0%);
+			}
+		}
+		@media (max-width:767px) {
+			width: 100%;
+		}
 	}
 
 	&__list {
 		display: flex;
+		position: relative;
+		z-index: 2;
+		li {
+			margin: 0 0 0 50px;
+			@media (max-width: 1700px) {
+				margin: 0 0 0 18px;
+			}
+		}
+		@media (max-width:1365px) {
+			display: block;
+			li{
+				margin: 0 0 20px 0;
+			}
+		}
 	}
 
 	&__link {
@@ -122,15 +206,160 @@ body {
 
 	&__form {
 		display: none;
+		flex: 1 1 auto;
+		margin-left: 50px;
+		position: relative;
+		z-index: 3;
+		@media (max-width: 1700px) {
+			margin: 0 0 0 20px;
+		}
+		@media (max-width:767px) {
+			width: 100%;
+			margin: 0;
+		}
 	}
 
 	&__input {
+		border: 2px solid rgb(192, 192, 192);
+		height: 46px;
+		border-radius: 5px;
+		width: 100%;
+		position: relative;
+		top: 7px;
+		padding: 0 10px;
+		font-size: 16px;
+		@media (max-width:767px) {
+			height: 40px;
+		}
 	}
 
 	&__button {
+		//!!!I STOPPED HERE!!!
 	}
 
 	&__open-search-button {
+		position: relative;
+		z-index: 3;
+		height: 48px;
+		flex: 0 0 48px;
+		margin: 0 0 0 46px;
+		cursor: pointer;
+		background: url("../img/header/search.svg") center no-repeat;
+		transition: all 0.3s ease 0s;
+		&:hover {
+			background: url("../img/header/search-hover.svg") center no-repeat;
+			span {
+				background-color: #234d8e;
+				&:before {
+					background-color: #234d8e;
+				}
+			}
+		}
+		@media (max-width: 1700px) {
+			margin: 0 0 0 10px;
+		}
+		@media (max-width:1365px) {
+			margin-left: auto;
+		}
+	}
+
+	&__close-search-button {
+		display: none;
+		position: relative;
+		z-index: 3;
+		height: 48px;
+		flex: 0 0 48px;
+		margin: 0 0 0 46px;
+		cursor: pointer;
+		transition: all 0.3s ease 0s;
+		position: relative;
+		span {
+			height: 2px;
+			width: 30px;
+			background-color: #313233;
+			border-radius: 2px;
+			transform: translate(-50%) rotate(45deg);
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transition: all 0.3s ease 0s;
+			&:before {
+				content: "";
+				height: 2px;
+				width: 30px;
+				background-color: #313233;
+				border-radius: 2px;
+				transform: rotate(90deg);
+				position: absolute;
+				top: 50%;
+				left: 0;
+				transition: all 0.3s ease 0s;
+			}
+		}
+		&:hover {
+			span {
+				background-color: #234d8e;
+				&:before {
+					background-color: #234d8e;
+				}
+			}
+		}
+		@media (max-width: 1700px) {
+			margin: 0 0 0 10px;
+		}
+	}
+
+	&__burger {
+		display: none;
+		position: relative;
+		z-index: 5;
+		@media (max-width: 1365px) {
+			display: block;
+			position: relative;
+			width: 30px;
+			height: 20px;
+			flex: 0 0 30px;
+			span{
+				background-color:#3d3d3d;
+				position: absolute;
+				width: 100%;
+				height: 2px;
+				left: 0;
+				top: 9px;
+				border-radius: 2px;
+				transition: all 0.3s ease 0s;
+			}
+			&:before,
+			&:after{
+				content: '';
+				background-color:#3d3d3d;
+				position: absolute;
+				width: 100%;
+				height: 2px;
+				left: 0;
+				border-radius: 2px;
+				transition: all 0.3s ease 0s;
+			}
+			&:before{
+				top: 0;
+			}
+			&:after{
+				bottom: 0;
+			}
+			&.active{
+				span{
+					transform: scale(0);
+				}
+			}
+			&.active:before{
+				transform: rotate(45deg);
+				top: 9px;
+			}
+			&.active:after{
+				transform: rotate(-45deg);
+				bottom: 9px;
+			}
+		}
 	}
 }
 
