--- a/scss/style.scss
+++ b/scss/style.scss
@@ -235,6 +235,8 @@ body{
 
 	&__button {
 		//!!!I STOPPED HERE!!!
+		//?HERE?
+		//TODO Сделать кнопку поиска внутри формы и выпадающее меню
 	}
 
 	&__open-search-button {
