--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,8 +40,8 @@ html,
 body {
 	font-family: "Helvetica";
 }
-body{
-	&.lock{
+body {
+	&.lock {
 		overflow: hidden;
 	}
 }
@@ -49,6 +49,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
+	overflow: hidden;
 }
 .container {
 	max-width: 1710px;
@@ -81,7 +82,7 @@ body{
 		justify-content: space-between;
 		align-items: center;
 		height: 110px;
-		.header__close-area{
+		.header__close-area {
 			transition: all 0.3s ease 0s;
 			opacity: 0;
 			visibility: hidden;
@@ -92,15 +93,15 @@ body{
 			height: 100%;
 			width: 100%;
 			z-index: 4;
-			&.active{
+			&.active {
 				opacity: 1;
 				visibility: visible;
 			}
 		}
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			height: 60px;
 		}
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			height: 50px;
 		}
 	}
@@ -118,11 +119,11 @@ body{
 		img {
 			max-width: 100%;
 		}
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			flex: 0 0 60px;
 			margin-right: 10px;
 		}
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			flex: 0 0 50px;
 		}
 	}
@@ -133,22 +134,22 @@ body{
 		letter-spacing: -0.02em;
 		color: #3d3d3d;
 		max-width: 280px;
-		span{
+		span {
 			display: none;
 		}
-		@media (max-width:767px) {
-			p{
+		@media (max-width: 767px) {
+			p {
 				font-size: 12px;
 				line-height: normal;
 			}
 		}
-		@media (max-width:460px) {
-			span{
+		@media (max-width: 460px) {
+			span {
 				display: block;
 				font-size: 14px;
 				font-weight: 700;
 			}
-			p{
+			p {
 				display: none;
 			}
 		}
@@ -157,8 +158,9 @@ body{
 	&__menu {
 		margin-left: auto;
 		transition: all 0.3s ease 0s;
-		overflow: auto;
-		@media (max-width: 1365px){
+		@media (max-width: 1365px) {
+			overflow-y: auto;
+			overflow-x: hidden;
 			position: fixed;
 			top: 0;
 			right: 0;
@@ -168,11 +170,11 @@ body{
 			background-color: #fff;
 			padding: 130px 15px 15px 15px;
 			transform: translate(100%);
-			&.active{
+			&.active {
 				transform: translate(0%);
 			}
 		}
-		@media (max-width:767px) {
+		@media (max-width: 460px) {
 			width: 100%;
 		}
 	}
@@ -182,14 +184,28 @@ body{
 		position: relative;
 		z-index: 2;
 		li {
+			position: relative;
 			margin: 0 0 0 50px;
+			transition: all 0.3s ease 0s;
+			&:hover {
+				.sub-menu__list {
+					opacity: 1;
+					visibility: visible;
+				}
+				.header__link{
+					color: #234d8e;
+					&:after {
+						width: 100%;
+					}
+				}
+			}
 			@media (max-width: 1700px) {
 				margin: 0 0 0 18px;
 			}
 		}
-		@media (max-width:1365px) {
+		@media (max-width: 1365px) {
 			display: block;
-			li{
+			li {
 				margin: 0 0 20px 0;
 			}
 		}
@@ -202,6 +218,20 @@ body{
 		letter-spacing: 0.02em;
 		text-transform: uppercase;
 		color: #313233;
+		position: relative;
+		z-index: 1;
+		transition: all 0.3s ease 0s;
+		&:after {
+			content: "";
+			position: absolute;
+			bottom: -40px;
+			left: 0;
+			background: #234d8e;
+			height: 2px;
+			width: 0%;
+			display: inline-block;
+			transition: all 0.3s ease 0s;
+		}
 	}
 
 	&__form {
@@ -213,7 +243,7 @@ body{
 		@media (max-width: 1700px) {
 			margin: 0 0 0 20px;
 		}
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			width: 100%;
 			margin: 0;
 		}
@@ -224,19 +254,27 @@ body{
 		height: 46px;
 		border-radius: 5px;
 		width: 100%;
-		position: relative;
-		top: 7px;
 		padding: 0 10px;
 		font-size: 16px;
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			height: 40px;
 		}
 	}
 
 	&__button {
-		//!!!I STOPPED HERE!!!
-		//?HERE?
-		//TODO Сделать кнопку поиска внутри формы и выпадающее меню
+		position: absolute;
+		top: -1px;
+		right: 0;
+		height: 48px;
+		width: 48px;
+		background: url("../img/header/search.svg") center no-repeat;
+		transition: all 0.3s ease 0s;
+		&:hover {
+			background: url("../img/header/search-hover.svg") center no-repeat;
+		}
+		@media (max-width: 767px) {
+			top: -5px;
+		}
 	}
 
 	&__open-search-button {
@@ -260,7 +298,7 @@ body{
 		@media (max-width: 1700px) {
 			margin: 0 0 0 10px;
 		}
-		@media (max-width:1365px) {
+		@media (max-width: 1365px) {
 			margin-left: auto;
 		}
 	}
@@ -321,8 +359,8 @@ body{
 			width: 30px;
 			height: 20px;
 			flex: 0 0 30px;
-			span{
-				background-color:#3d3d3d;
+			span {
+				background-color: #3d3d3d;
 				position: absolute;
 				width: 100%;
 				height: 2px;
@@ -332,9 +370,9 @@ body{
 				transition: all 0.3s ease 0s;
 			}
 			&:before,
-			&:after{
-				content: '';
-				background-color:#3d3d3d;
+			&:after {
+				content: "";
+				background-color: #3d3d3d;
 				position: absolute;
 				width: 100%;
 				height: 2px;
@@ -342,25 +380,62 @@ body{
 				border-radius: 2px;
 				transition: all 0.3s ease 0s;
 			}
-			&:before{
+			&:before {
 				top: 0;
 			}
-			&:after{
+			&:after {
 				bottom: 0;
 			}
-			&.active{
-				span{
+			&.active {
+				span {
 					transform: scale(0);
 				}
 			}
-			&.active:before{
+			&.active:before {
 				transform: rotate(45deg);
 				top: 9px;
 			}
-			&.active:after{
+			&.active:after {
 				transform: rotate(-45deg);
 				bottom: 9px;
 			}
+		}
+	}
+	.sub-menu {
+		position: relative;
+		&__list {
+			transition: all 0.3s ease 0s;
+			opacity: 0;
+			visibility: hidden;
+			position: absolute;
+			z-index: 0;
+			left: -46px;
+			top: 0px;
+			padding: 64px 0px 0px 0px;
+			min-width: 400px;
+			background-color: #ffffff;
+			li {
+				padding: 20px 20px 20px 46px;
+				margin: 0;
+				transition: all 0.3s ease 0s;
+				&:last-child {
+					margin-bottom: 0;
+				}
+				&:hover{
+					background: #234D8E;
+					.sub-menu__link{
+						color: #fff;
+					}
+				}
+			}
+		}
+
+		&__link {
+			transition: all 0.3s ease 0s;
+			color: #000;
+			font-size: 18px;
+			line-height: 20px;
+			display: inline-block;
 		}
 	}
 }
@@ -369,6 +444,7 @@ body{
 
 .main {
 	flex: 1 1 auto;
+	background-color: #999;
 }
 
 //footer
