--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,42 @@ body.lock {
   overflow: hidden;
 }
 
+body.mouse .header__list li:hover .sub-menu__list {
+  opacity: 1;
+  visibility: visible;
+}
+
+body.mouse .header__list li:hover .sub-menu__list li:hover {
+  background: #234d8e;
+}
+
+body.mouse .header__list li:hover .sub-menu__list li:hover .sub-menu__link {
+  color: #fff;
+}
+
+body.mouse .header__list li:hover .header__link {
+  color: #234d8e;
+}
+
+body.mouse .header__list li:hover .header__link:after {
+  width: 100%;
+}
+
+body.touch .sub-menu__list.open {
+  opacity: 1;
+  visibility: visible;
+  background-color: #dae8fd;
+  padding: 10px;
+  position: relative;
+  z-index: 10;
+  left: -15px;
+  min-width: 100%;
+}
+
+body.touch .sub-menu__list.open li {
+  padding: 10px 20px 10px 20px;
+}
+
 .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -327,17 +363,29 @@ body.lock {
   transition: all 0.3s ease 0s;
 }
 
-.header__list li:hover .sub-menu__list {
-  opacity: 1;
-  visibility: visible;
+.header__list li .arrow {
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  display: none;
+  width: 12px;
+  height: 12px;
+  margin-left: 10px;
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+  background: url("../img/header/arrow-black.svg") center/contain no-repeat;
 }
 
-.header__list li:hover .header__link {
-  color: #234d8e;
+.header__list li .arrow.active {
+  background: url("../img/header/arrow.svg") center/contain no-repeat;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
-.header__list li:hover .header__link:after {
-  width: 100%;
+@media (max-width: 1365px) {
+  .header__list li .arrow {
+    display: inline-block;
+  }
 }
 
 @media (max-width: 1700px) {
@@ -610,6 +658,7 @@ body.lock {
   left: -46px;
   top: 0px;
   padding: 64px 0px 0px 0px;
+  margin-right: -30px;
   min-width: 400px;
   background-color: #ffffff;
 }
@@ -623,14 +672,6 @@ body.lock {
 
 .header .sub-menu__list li:last-child {
   margin-bottom: 0;
-}
-
-.header .sub-menu__list li:hover {
-  background: #234D8E;
-}
-
-.header .sub-menu__list li:hover .sub-menu__link {
-  color: #fff;
 }
 
 .header .sub-menu__link {
