--- a/scss/style.scss
+++ b/scss/style.scss
@@ -248,7 +248,7 @@ body {
 			width: 300px;
 			height: 100%;
 			background-color: #fff;
-			padding: 130px 15px 15px 15px;
+			padding: 70px 15px 15px 15px;
 			transform: translate(100%);
 			&.active {
 				transform: translate(0%);
@@ -511,6 +511,12 @@ body {
 					margin-bottom: 0;
 				}
 			}
+		}
+
+		&__list-last{
+			left: -324px;
+			text-align: right;
+			min-width: 300px;
 		}
 
 		&__link {
