--- a/scss/style.scss
+++ b/scss/style.scss
@@ -513,7 +513,7 @@ body {
 			}
 		}
 
-		&__list-last{
+		&__list-last {
 			left: -324px;
 			text-align: right;
 			min-width: 300px;
@@ -532,13 +532,276 @@ body {
 //main
 
 .main {
+	padding-top: 130px;
 	flex: 1 1 auto;
-	background-color: #999;
+	background-color: rgb(208, 255, 187);
+	@media (max-width:px) {}
 }
 
 //footer
 
-footer {
-	background-color: rgb(76, 64, 255);
-	min-height: 80px;
+.footer {
+	background: #132e51;
+	&__body {
+		padding-top: 65px;
+		display: flex;
+		justify-content: space-between;
+		flex-direction: column;
+		min-height: 460px;
+		@media (max-width: 1365px) {
+			min-height: 300px;
+			padding-top: 20px;
+		}
+	}
+
+	&__flex-row {
+		display: flex;
+		justify-content: space-between;
+		margin: 0 -10px;
+		padding: 10px 0;
+		@media (max-width:767px) {
+			flex-direction: column;
+		}
+	}
+
+	&__column {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 0 10px;
+		flex: 0 1 25%;
+		@media (max-width:767px) {
+			margin-bottom: 20px;
+			text-align: center;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+		&-logo {
+			flex: 0 1 20%;
+			@media (max-width:767px){
+				flex-direction: row;
+				align-items: center;
+				justify-content: space-between;
+				flex: 1 1 auto;
+			}
+			@media (max-width:460px) {
+				flex-direction: column;
+			}
+		}
+		&-descriptor {
+			flex: 0 1 30%;
+			@media (max-width:767px){
+				align-items: center;
+			}
+		}
+	}
+
+	&__logo {
+		width: 118px;
+		img{
+			max-width: 100%;
+		}
+		@media (max-width:460px){
+			margin-bottom: 10px;
+		}
+	}
+
+	&__item {
+		@media (max-width:460px){
+			margin-bottom: 10px;
+		}
+	}
+
+	&__subtitle {
+		font-weight: bold;
+		font-size: 14px;
+		line-height: 30px;
+		letter-spacing: -0.04em;
+		text-transform: uppercase;
+		color: #5d799c;
+		@media (max-width: 1365px){
+			margin-bottom: 10px;
+			line-height: normal;
+		}
+	}
+
+	&__text {
+		font-weight: 300;
+		font-size: 20px;
+		line-height: 30px;
+		letter-spacing: -0.04em;
+		color: #ffffff;
+		max-width: 345px;
+		a {
+			font-weight: 300;
+			font-size: 20px;
+			line-height: 30px;
+			letter-spacing: -0.04em;
+			color: #ffffff;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+		p {
+			margin-bottom: 20px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
+		@media (max-width: 1365px) {
+			font-size: 14px;
+			line-height: normal;
+			a {
+				font-size: 14px;
+				line-height: normal;
+			}
+		}
+		@media (max-width:767px){
+			max-width: 100%;
+			p {
+				margin-bottom: 10px;
+			}
+		}
+	}
+	&__descriptor {
+		padding-top: 24px;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: -0.02em;
+		max-width: 284px;
+		@media (max-width:1365px) {
+			padding-top: 0;
+		}
+		@media (max-width:767px){
+			margin-bottom: 10px;
+		}
+	}
+
+	&__phone {
+	}
+
+	&__list {
+		li {
+			list-style: none;
+			margin-bottom: 10px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		@media (max-width:767px){
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+			li{
+				margin-right: 10px;
+			}
+		}
+	}
+
+	&__link {
+		font-weight: bold;
+		font-size: 16px;
+		line-height: 30px;
+		letter-spacing: -0.02em;
+		text-transform: uppercase;
+		color: #ffffff;
+		&:hover {
+			text-decoration: underline;
+		}
+		@media (max-width: 1365px) {
+			font-size: 14px;
+			line-height: normal;
+		}
+	}
+
+	&__bottom {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		min-height: 78px;
+		position: relative;
+		margin-top: 10px;
+		padding: 20px 0;
+		&:before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+			height: 1px;
+			width: 100%;
+			background: #2a4466;
+		}
+		@media (max-width:460px){
+			flex-direction: column;
+		}
+	}
+
+	&__description {
+		font-weight: 300;
+		font-size: 11px;
+		line-height: 14px;
+		display: flex;
+		align-items: center;
+		color: #5d799c;
+		max-width: 620px;
+		margin-right: 10px;
+		@media (max-width:460px){
+			margin: 0;
+			text-align: center;
+		}
+	}
+
+	&__developer {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		@media (max-width:992px) {
+			flex-direction: column;
+			flex: 0 0 170px;
+		}
+		@media (max-width:460px){
+			flex: 1 1 auto;
+		}
+	}
+
+	&__dev-name {
+		font-weight: 200;
+		font-size: 12px;
+		line-height: 30px;
+		display: flex;
+		align-items: center;
+		text-align: right;
+		letter-spacing: 0.04em;
+		color: #5d799c;
+		margin-right: 10px;
+		a {
+			font-weight: 200;
+			font-size: 12px;
+			line-height: 30px;
+			display: flex;
+			align-items: center;
+			text-align: right;
+			letter-spacing: 0.04em;
+			color: #5d799c;
+			text-decoration: underline;
+			transition: all 0.3s ease 0s;
+			margin-left: 4px;
+			&:hover {
+				color: #fff;
+			}
+		}
+		@media (max-width:992px){
+			margin-right: 0;
+			margin-bottom: 5px;
+		}
+	}
+
+	&__dev-logo {
+		width: 118px;
+		img{
+			max-width: 100%;
+		}
+	}
 }
