--- a/scss/style.scss
+++ b/scss/style.scss
@@ -542,6 +542,7 @@ body {
 .footer {
 	background: #132e51;
 	&__body {
+		transition: all 0.3s ease 0s;
 		padding-top: 65px;
 		display: flex;
 		justify-content: space-between;
@@ -554,11 +555,12 @@ body {
 	}
 
 	&__flex-row {
+		transition: all 0.3s ease 0s;
 		display: flex;
 		justify-content: space-between;
 		margin: 0 -10px;
 		padding: 10px 0;
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			flex-direction: column;
 		}
 	}
@@ -569,28 +571,29 @@ body {
 		justify-content: space-between;
 		padding: 0 10px;
 		flex: 0 1 25%;
-		@media (max-width:767px) {
+		@media (max-width: 767px) {
 			margin-bottom: 20px;
 			text-align: center;
-			&:last-child{
+			&:last-child {
 				margin-bottom: 0;
 			}
 		}
 		&-logo {
 			flex: 0 1 20%;
-			@media (max-width:767px){
+			@media (max-width: 767px) {
 				flex-direction: row;
 				align-items: center;
 				justify-content: space-between;
 				flex: 1 1 auto;
 			}
-			@media (max-width:460px) {
+			@media (max-width: 460px) {
 				flex-direction: column;
+				margin-bottom: 0;
 			}
 		}
 		&-descriptor {
 			flex: 0 1 30%;
-			@media (max-width:767px){
+			@media (max-width: 767px) {
 				align-items: center;
 			}
 		}
@@ -598,16 +601,39 @@ body {
 
 	&__logo {
 		width: 118px;
-		img{
+		img {
 			max-width: 100%;
 		}
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			margin-bottom: 10px;
+		}
+	}
+	&__mobile-button {
+		display: none;
+		@media (max-width: 460px) {
+			display: block;
+			font-size: 16px;
+			font-weight: 300;
+			line-height: 30px;
+			letter-spacing: -0.02em;
+			text-transform: uppercase;
+			color: #ffffff;
+			margin-bottom: 10px;
+			&:after{
+				content: '';
+				border-top: 10px solid rgb(255, 255, 255);
+				border-right: 10px solid transparent;
+				border-left: 10px solid transparent;
+				height: 0px;
+				width: 0px;
+				display: block;
+				margin: 0 auto;
+			}
 		}
 	}
 
 	&__item {
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			margin-bottom: 10px;
 		}
 	}
@@ -619,7 +645,7 @@ body {
 		letter-spacing: -0.04em;
 		text-transform: uppercase;
 		color: #5d799c;
-		@media (max-width: 1365px){
+		@media (max-width: 1365px) {
 			margin-bottom: 10px;
 			line-height: normal;
 		}
@@ -644,7 +670,7 @@ body {
 		}
 		p {
 			margin-bottom: 20px;
-			&:last-child{
+			&:last-child {
 				margin-bottom: 0;
 			}
 		}
@@ -656,7 +682,7 @@ body {
 				line-height: normal;
 			}
 		}
-		@media (max-width:767px){
+		@media (max-width: 767px) {
 			max-width: 100%;
 			p {
 				margin-bottom: 10px;
@@ -669,11 +695,15 @@ body {
 		line-height: 24px;
 		letter-spacing: -0.02em;
 		max-width: 284px;
-		@media (max-width:1365px) {
+		@media (max-width: 1365px) {
 			padding-top: 0;
 		}
-		@media (max-width:767px){
+		@media (max-width: 767px) {
 			margin-bottom: 10px;
+		}
+		@media (max-width:460px) {
+			align-self: center;
+			max-width: 100%;
 		}
 	}
 
@@ -688,11 +718,11 @@ body {
 				margin-bottom: 0;
 			}
 		}
-		@media (max-width:767px){
+		@media (max-width: 767px) {
 			display: flex;
 			justify-content: center;
 			flex-wrap: wrap;
-			li{
+			li {
 				margin-right: 10px;
 			}
 		}
@@ -732,7 +762,7 @@ body {
 			width: 100%;
 			background: #2a4466;
 		}
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			flex-direction: column;
 		}
 	}
@@ -746,7 +776,7 @@ body {
 		color: #5d799c;
 		max-width: 620px;
 		margin-right: 10px;
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			margin: 0;
 			text-align: center;
 		}
@@ -756,11 +786,11 @@ body {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		@media (max-width:992px) {
+		@media (max-width: 992px) {
 			flex-direction: column;
 			flex: 0 0 170px;
 		}
-		@media (max-width:460px){
+		@media (max-width: 460px) {
 			flex: 1 1 auto;
 		}
 	}
@@ -791,7 +821,7 @@ body {
 				color: #fff;
 			}
 		}
-		@media (max-width:992px){
+		@media (max-width: 992px) {
 			margin-right: 0;
 			margin-bottom: 5px;
 		}
@@ -799,8 +829,13 @@ body {
 
 	&__dev-logo {
 		width: 118px;
-		img{
+		img {
 			max-width: 100%;
+		}
+	}
+	._hidden-element{
+		@media (max-width:460px) {
+			display: none;
 		}
 	}
 }
