--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ body.touch .sub-menu__list.open li {
     top: 0;
     right: 0;
     z-index: 5;
-    width: 300px;
+    width: 360px;
     height: 100%;
     background-color: #fff;
     padding: 70px 15px 15px 15px;
@@ -403,7 +403,7 @@ body.touch .sub-menu__list.open li {
   height: 20px;
   margin-left: 10px;
   position: relative;
-  top: 4px;
+  top: 2px;
   z-index: 2;
   cursor: pointer;
   background: url("../img/header/arrow-black.svg") left center/contain no-repeat;
@@ -418,6 +418,12 @@ body.touch .sub-menu__list.open li {
 @media (max-width: 1365px) {
   .header__list li .arrow {
     display: inline-block;
+  }
+}
+
+@media (max-width: 460px) {
+  .header__list li .arrow {
+    top: 4px;
   }
 }
 
@@ -463,6 +469,12 @@ body.touch .sub-menu__list.open li {
 }
 
 @media (max-width: 1365px) {
+  .header__link {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 460px) {
   .header__link {
     font-size: 16px;
   }
@@ -698,7 +710,7 @@ body.touch .sub-menu__list.open li {
   left: -46px;
   top: 0px;
   padding: 64px 0px 0px 0px;
-  margin-right: -30px;
+  margin: 10px -30px 0 0;
   min-width: 400px;
   background-color: #ffffff;
 }
