--- a/scss/style.scss
+++ b/scss/style.scss
@@ -245,7 +245,7 @@ body {
 			top: 0;
 			right: 0;
 			z-index: 5;
-			width: 300px;
+			width: 360px;
 			height: 100%;
 			background-color: #fff;
 			padding: 70px 15px 15px 15px;
@@ -274,7 +274,7 @@ body {
 				height: 20px;
 				margin-left: 10px;
 				position: relative;
-				top: 4px;
+				top: 2px;
 				z-index: 2;
 				cursor: pointer;
 				background: url("../img/header/arrow-black.svg") left center/contain no-repeat;
@@ -284,6 +284,9 @@ body {
 				}
 				@media (max-width: 1365px) {
 					display: inline-block;
+				}
+				@media (max-width:460px){
+					top: 4px;
 				}
 			}
 			@media (max-width: 1700px) {
@@ -320,6 +323,9 @@ body {
 			transition: all 0.3s ease 0s;
 		}
 		@media (max-width:1365px) {
+			font-size: 18px;
+		}
+		@media (max-width:460px) {
 			font-size: 16px;
 		}
 	}
@@ -504,7 +510,7 @@ body {
 			left: -46px;
 			top: 0px;
 			padding: 64px 0px 0px 0px;
-			margin-right: -30px;
+			margin: 10px -30px 0 0;
 			min-width: 400px;
 			background-color: #ffffff;
 			li {
