--- a/scss/style.scss
+++ b/scss/style.scss
@@ -627,7 +627,7 @@ body {
 			font-size: 16px;
 			font-weight: 300;
 			line-height: 30px;
-			letter-spacing: -0.02em;
+			letter-spacing: 0.1em;
 			text-transform: uppercase;
 			color: #ffffff;
 			margin-bottom: 10px;
@@ -846,5 +846,8 @@ body {
 		@media (max-width:460px) {
 			display: none;
 		}
+	}
+	.hide-info{
+		display: none;
 	}
 }
